--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.4.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -17,9 +18,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.11",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
