--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
