--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-auth": "^5.0.0-beta.11",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
