--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.4.0",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -38,6 +40,7 @@
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.11",
+    "next-cloudinary": "^6.3.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
