--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.0.4",
     "immer": "^10.0.4",
     "lucide-react": "^0.363.0",
     "mongodb": "^6.3.0",
